unpackaged/main/default/objects/CMTD__EnhancedRelatedList__mdt/CMTD__EnhancedRelatedList__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type object to manage the fields used in CMTD Enhanced Related List lightning component</description>
    <label>Enhanced Related List</label>
    <pluralLabel>Enhanced Related List</pluralLabel>
</CustomObject>