unpackaged/main/default/objects/CMTD__EnhancedRelatedList__mdt/fields/CMTD__Colour__c.field-meta.xml
<CustomField>
    <fullName>CMTD__Colour__c</fullName>
    <description>Colour for Badge UI Type Override - only accept HEX</description>
    <inlineHelpText>Colour for Badge UI Type Override - only accept HEX</inlineHelpText>
    <label>Colour</label>
    <length>6</length>
    <type>Text</type>
</CustomField>