unpackaged/main/default/objects/CMTD__EnhancedRelatedList__mdt/fields/CMTD__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>CMTD__Field_API_Name__c</fullName>
    <description>Field API Name of the object as specified in "Object API Name" attribute of the CMTD Enhanced Related List component</description>
    <inlineHelpText>Field API Name of the object as specified in "Object API Name" attribute of the CMTD Enhanced Related List component</inlineHelpText>
    <label>Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>