unpackaged/main/default/objects/CMTD__EnhancedRelatedList__mdt/fields/CMTD__Order__c.field-meta.xml
<CustomField>
    <fullName>CMTD__Order__c</fullName>
    <description>Sequence to display the fields in the component</description>
    <inlineHelpText>Sequence to display the fields in the component</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>