unpackaged/main/default/objects/CMTD__EnhancedRelatedList__mdt/fields/CMTD__Related_List_Name__c.field-meta.xml
<CustomField>
    <fullName>CMTD__Related_List_Name__c</fullName>
    <description>Related List Name as specified in "Related List Name" attribute of the CMTD Enhanced Related List component</description>
    <inlineHelpText>Related List Name as specified in "Related List Name" attribute of the CMTD Enhanced Related List component</inlineHelpText>
    <label>Related List Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>