unpackaged/main/default/objects/CMTD__EnhancedRelatedList__mdt/validationRules/CMTD__Colour_Populated_For_Badge.validationRule-meta.xml
<ValidationRule>
    <fullName>CMTD__Colour_Populated_For_Badge</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( CMTD__Colour__c )) &amp;&amp; NOT(ISPICKVAL( CMTD__UI_Type_Override__c ,'Badge'))</errorConditionFormula>
    <errorMessage>Colour can only be populated for Checkbox Badge UI Type</errorMessage>
</ValidationRule>